Fix a display issue for Blog posts on Mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,7 @@
 }
 
 .main {
+  max-width: 100%;
   margin-top: 3rem;
   margin-bottom: 3rem;
   flex: 1;
